Respect "one line per paragraph" protocol. This is done to make text extraction easier.

--- a/tex/p027.tex
+++ b/tex/p027.tex
@@ -48,14 +48,7 @@
 \vs p027 7:1 Worship is the highest privilege and the first duty of all created intelligences. Worship is the conscious and joyous act of recognizing and acknowledging the truth and fact of the intimate and personal relationships of the Creators with their creatures. The quality of worship is determined by the depth of creature perception; and as the knowledge of the infinite character of the Gods progresses, the act of worship becomes increasingly all\hyp{}encompassing until it eventually attains the glory of the highest experiential delight and the most exquisite pleasure known to created beings.
 \vs p027 7:2 \pc While the Isle of Paradise contains certain places of worship, it is more nearly one vast sanctuary of divine service. Worship is the first and dominant passion of all who climb to its blissful shores --- the spontaneous ebullition of the beings who have learned enough of God to attain his presence. Circle by circle, during the inward journey through Havona, worship is a growing passion until on Paradise it becomes necessary to direct and otherwise control its expression.
 \vs p027 7:3 The periodic, spontaneous, group, and other special outbursts of supreme adoration and spiritual praise enjoyed on Paradise are conducted under the leadership of a special corps of primary supernaphim. Under the direction of these conductors of worship, such homage achieves the creature goal of supreme pleasure and attains the heights of the perfection of sublime self\hyp{}expression and personal enjoyment. All primary supernaphim crave to be conductors of worship; and all ascendant beings would enjoy forever remaining in the attitude of worship did not the chiefs of assignment periodically disperse these assemblages. But no ascendant being is ever required to enter upon the assignments of eternal service until he has attained full satisfaction in worship.
-\vs p027 7:4 \pc It is the task of the conductors of worship so to teach the ascendant creatures how to worship that they may be enabled to gain this satisfaction of self\hyp{}expression and at the same time be able to give attention to the essential activities of the Paradise regime. Without improvement in the technique of worship it would require hundreds of years for the average mortal who reaches Paradise to give full and satisfactory expression to his emotions of intelligent appreciation and ascendant gratitude. The conductors of worship open up new and hitherto unknown avenues of expression so that these wonderful children of the womb of space and the travail of time are enabled to gain the full satisfactions of worship in much less time.
-\tunemarkup{pictures}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.37}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.26}]{../urantia-pictures/Troy-Bishop/conductor_of_worship_on_paradise_700x525h.jpg}
-\caption{Conductor of Worship on Paradise by Troy~R.~Bishop}
-\end{figure}
-}
+\vs p027 7:4 \pc It is the task of the conductors of worship so to teach the ascendant creatures how to worship that they may be enabled to gain this satisfaction of self\hyp{}expression and at the same time be able to give attention to the essential activities of the Paradise regime. Without improvement in the technique of worship it would require hundreds of years for the average mortal who reaches Paradise to give full and satisfactory expression to his emotions of intelligent appreciation and ascendant gratitude. The conductors of worship open up new and hitherto unknown avenues of expression so that these wonderful children of the womb of space and the travail of time are enabled to gain the full satisfactions of worship in much less time.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.37}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.26}]{../urantia-pictures/Troy-Bishop/conductor_of_worship_on_paradise_700x525h.jpg}\caption{Conductor of Worship on Paradise by Troy~R.~Bishop}\end{figure}}
 \vs p027 7:5 All the arts of all the beings of the entire universe which are capable of intensifying and exalting the abilities of self\hyp{}expression and the conveyance of appreciation, are employed to their highest capacity in the worship of the Paradise Deities. \bibemph{Worship is the highest joy of Paradise existence;} it is the refreshing play of Paradise. What play does for your jaded minds on earth, worship will do for your perfected souls on Paradise. The mode of worship on Paradise is utterly beyond mortal comprehension, but the spirit of it you can begin to appreciate even down here on Urantia, for the spirits of the Gods even now indwell you, hover over you, and inspire you to true worship.
 \vs p027 7:6 There are appointed times and places for worship on Paradise, but these are not adequate to accommodate the ever\hyp{}increasing overflow of the spiritual emotions of the growing intelligence and expanding divinity recognition of the brilliant beings of experiential ascension to the eternal Isle. Never since the times of Grandfanda have the supernaphim been able fully to accommodate the spirit of worship on Paradise. Always is there an excess of worshipfulness as gauged by the preparation therefor. And this is because personalities of inherent perfection never can fully appreciate the tremendous reactions of the spiritual emotions of beings who have slowly and laboriously made their way upward to Paradise glory from the depths of the spiritual darkness of the lower worlds of time and space. When such angels and mortals of time attain the presence of the Powers of Paradise, there occurs the expression of the accumulated emotions of the ages, a spectacle astounding to the angels of Paradise and productive of the supreme joy of divine satisfaction in the Paradise Deities.
 \vs p027 7:7 Sometimes all Paradise becomes engulfed in a dominating tide of spiritual and worshipful expression. Often the conductors of worship cannot control such phenomena until the appearance of the threefold fluctuation of the light of the Deity abode, signifying that the divine heart of the Gods has been fully and completely satisfied by the sincere worship of the residents of Paradise, the perfect citizens of glory and the ascendant creatures of time. What a triumph of technique! What a fruition of the eternal plan and purpose of the Gods that the intelligent love of the creature child should give full satisfaction to the infinite love of the Creator Father!
