--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -24,14 +24,7 @@
 \usection{3.\bibnobreakspace The Jerusem Broadcasts}
 \vs p046 3:1 The superuniverse and Paradise\hyp{}Havona broadcasts are received on Jerusem in liaison with Salvington and by a technique involving the polar crystal, the sea of glass. In addition to provisions for the reception of these extra\hyp{}Nebadon communications, there are 3 distinct groups of receiving stations. These separate but tricircular groups of stations are adjusted to the reception of broadcasts from the local worlds, from the constellation headquarters, and from the capital of the local universe. All these broadcasts are automatically displayed so as to be discernible by all types of beings present in the central broadcast amphitheatre; of all preoccupations for an ascendant mortal on Jerusem, none is more engaging and engrossing than that of listening in on the never\hyp{}ending stream of universe space reports.
 \vs p046 3:2 This Jerusem broadcast\hyp{}receiving station is encircled by an enormous amphitheatre, constructed of scintillating materials largely unknown on Urantia and seating over five billion beings --- material and morontia --- besides accommodating innumerable spirit personalities. It is the favourite diversion for all Jerusem to spend their leisure at the broadcast station, there to learn of the welfare and state of the universe. And this is the only planetary activity which is not slowed down during the recession of light.
-\vs p046 3:3 At this broadcast\hyp{}receiving amphitheatre the Salvington messages are coming in continuously. Near by, the Edentia word of the Most High Constellation Fathers is received at least once a day. Periodically the regular and special broadcasts of Uversa are relayed through Salvington, and when Paradise messages are in reception, the entire population is assembled around the sea of glass, and the Uversa friends add the reflectivity phenomena to the technique of the Paradise broadcast so that everything heard becomes visible. And it is in this manner that continual foretastes of advancing beauty and grandeur are afforded the mortal survivors as they journey inward on the eternal adventure.
-\tunemarkup{pictures}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/showtime_at_the_amphitheater_700x525h.jpg}
-\caption{Showtime at the Amphitheater by Troy~R.~Bishop}
-\end{figure}
-}
+\vs p046 3:3 At this broadcast\hyp{}receiving amphitheatre the Salvington messages are coming in continuously. Near by, the Edentia word of the Most High Constellation Fathers is received at least once a day. Periodically the regular and special broadcasts of Uversa are relayed through Salvington, and when Paradise messages are in reception, the entire population is assembled around the sea of glass, and the Uversa friends add the reflectivity phenomena to the technique of the Paradise broadcast so that everything heard becomes visible. And it is in this manner that continual foretastes of advancing beauty and grandeur are afforded the mortal survivors as they journey inward on the eternal adventure.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/showtime_at_the_amphitheater_700x525h.jpg}\caption{Showtime at the Amphitheater by Troy~R.~Bishop}\end{figure}}
 \vs p046 3:4 \pc The Jerusem sending station is located at the opposite pole of the sphere. All broadcasts to the individual worlds are relayed from the system capitals except the Michael messages, which sometimes go direct to their destinations over the archangels’ circuit.
 \usection{4.\bibnobreakspace Residential and Administrative Areas}
 \vs p046 4:1 Considerable portions of Jerusem are assigned as residential areas, while other portions of the system capital are given over to the necessary administrative functions involving the supervision of the affairs of 619 inhabited spheres, 56 transitional\hyp{}culture worlds, and the system capital itself. On Jerusem and in Nebadon these arrangements are designed as follows:
