--- a/tex/p110.tex
+++ b/tex/p110.tex
@@ -28,14 +28,7 @@
 \vs p110 3:9 \ublistelem{3.}\bibnobreakspace Loving man and sincerely desiring to serve him --- wholehearted recognition of the brotherhood of man coupled with an intelligent and wise affection for each of your fellow mortals.
 \vs p110 3:10 \ublistelem{4.}\bibnobreakspace Joyful acceptance of cosmic citizenship --- honest recognition of your progressive obligations to the Supreme Being, awareness of the interdependence of evolutionary man and evolving Deity. This is the birth of cosmic morality and the dawning realization of universal duty.
 \usection{4.\bibnobreakspace The Adjuster’s Work in the Mind}
-\vs p110 4:1 Adjusters are able to receive the continuous stream of cosmic intelligence coming in over the master circuits of time and space; they are in full touch with the spirit intelligence and energy of the universes. But these mighty indwellers are unable to transmit very much of this wealth of wisdom and truth to the minds of their mortal subjects because of the lack of commonness of nature and the absence of responsive recognition.
-\tunemarkup{pictures}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.43}\tunemarkup{pghanlin}{0.49}\tunemarkup{pgnexus7}{0.42}\tunemarkup{pgkindledx}{0.39}]{../urantia-pictures/Troy-Bishop/Morontia-Soul.jpg}
-\caption{Morontia Soul by Vincent~Ventola}
-\end{figure}
-}
+\vs p110 4:1 Adjusters are able to receive the continuous stream of cosmic intelligence coming in over the master circuits of time and space; they are in full touch with the spirit intelligence and energy of the universes. But these mighty indwellers are unable to transmit very much of this wealth of wisdom and truth to the minds of their mortal subjects because of the lack of commonness of nature and the absence of responsive recognition.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.43}\tunemarkup{pghanlin}{0.49}\tunemarkup{pgnexus7}{0.42}\tunemarkup{pgkindledx}{0.39}]{../urantia-pictures/Troy-Bishop/Morontia-Soul.jpg}\caption{Morontia Soul by Vincent~Ventola}\end{figure}}
 \vs p110 4:2 The Thought Adjuster is engaged in a constant effort so to spiritualize your mind as to evolve your morontia soul; but you yourself are mostly unconscious of this inner ministry. You are quite incapable of distinguishing the product of your own material intellect from that of the conjoint activities of your soul and the Adjuster.
 \vs p110 4:3 Certain abrupt presentations of thoughts, conclusions, and other pictures of mind are sometimes the direct or indirect work of the Adjuster; but far more often they are the sudden emergence into consciousness of ideas which have been grouping themselves together in the submerged mental levels, natural and everyday occurrences of normal and ordinary psychic function inherent in the circuits of the evolving animal mind. (In contrast with these subconscious emanations, the revelations of the Adjuster appear through the realms of the superconscious.)
 \vs p110 4:4 Trust all matters of mind beyond the dead level of consciousness to the custody of the Adjusters. In due time, if not in this world then on the mansion worlds, they will give good account of their stewardship, and eventually will they bring forth those meanings and values intrusted to their care and keeping. They will resurrect every worthy treasure of the mortal mind if you survive.
