--- a/tex/p113.tex
+++ b/tex/p113.tex
@@ -7,14 +7,7 @@
 \vs p113 1:2 Originally, the seraphim were definitely assigned to the separate Urantia races. But since the bestowal of Michael, they are assigned in accordance with human intelligence, spirituality, and destiny. Intellectually, mankind is divided into three classes:
 \vs p113 1:3 \ublistelem{1.}\bibnobreakspace The subnormal minded --- those who do not exercise normal will power; those who do not make average decisions. This class embraces those who cannot comprehend God; they lack capacity for the intelligent worship of Deity. The subnormal beings of Urantia have a corps of seraphim, one company, with one battalion of cherubim, assigned to minister to them and to witness that justice and mercy are extended to them in the life struggles of the sphere.
 \vs p113 1:4 \ublistelem{2.}\bibnobreakspace The average, normal type of human mind. From the standpoint of seraphic ministry, most men and women are grouped in seven classes in accordance with their status in making the circles of human progress and spiritual development.
-\vs p113 1:5 \ublistelem{3.}\bibnobreakspace The supernormal minded --- those of great decision and undoubted potential of spiritual achievement; men and women who enjoy more or less contact with their indwelling Adjusters; members of the various reserve corps of destiny. No matter in what circle a human happens to be, if such an individual becomes enrolled in any of the several reserve corps of destiny, right then and there, personal seraphim are assigned, and from that time until the earthly career is finished, that mortal will enjoy the continuous ministry and unceasing watchcare of a guardian angel. Also, when any human being makes \bibemph{the} supreme decision, when there is a real betrothal with the Adjuster, a personal guardian is immediately assigned to that soul.
-\tunemarkup{pictures}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{1.66}\tunemarkup{pghanlin}{1.45}\tunemarkup{pgnexus7}{1.46}\tunemarkup{pgkindledx}{1.1}]{../urantia-pictures/Troy-Bishop/in_the_presence_of_the_burning_bush_700x525h.jpg}
-\caption{In the Presence of the Burning Bush by Troy~R.~Bishop}
-\end{figure}
-}
+\vs p113 1:5 \ublistelem{3.}\bibnobreakspace The supernormal minded --- those of great decision and undoubted potential of spiritual achievement; men and women who enjoy more or less contact with their indwelling Adjusters; members of the various reserve corps of destiny. No matter in what circle a human happens to be, if such an individual becomes enrolled in any of the several reserve corps of destiny, right then and there, personal seraphim are assigned, and from that time until the earthly career is finished, that mortal will enjoy the continuous ministry and unceasing watchcare of a guardian angel. Also, when any human being makes \bibemph{the} supreme decision, when there is a real betrothal with the Adjuster, a personal guardian is immediately assigned to that soul.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{1.66}\tunemarkup{pghanlin}{1.45}\tunemarkup{pgnexus7}{1.46}\tunemarkup{pgkindledx}{1.1}]{../urantia-pictures/Troy-Bishop/in_the_presence_of_the_burning_bush_700x525h.jpg}\caption{In the Presence of the Burning Bush by Troy~R.~Bishop}\end{figure}}
 \vs p113 1:6 \pc In the ministry to so\hyp{}called normal beings, seraphic assignments are made in accordance with the human attainment of the circles of intellectuality and spirituality. You start out in your mind of mortal investment in the seventh circle and journey inward in the task of self\hyp{}understanding, self\hyp{}conquest, and self\hyp{}mastery; and circle by circle you advance until (if natural death does not terminate your career and transfer your struggles to the mansion worlds) you reach the first or inner circle of relative contact and communion with the indwelling Adjuster.
 \vs p113 1:7 Human beings in the initial or 7\ts{th} circle have 1 guardian angel with 1 company of assisting cherubim assigned to the watchcare and custody of 1,000 mortals. In the 6\ts{th} circle, a seraphic pair with 1 company of cherubim is assigned to guide these ascending mortals in groups of 500. When the 5\ts{th} circle is attained, human beings are grouped in companies of approximately 100, and a pair of guardian seraphim with a group of cherubim is placed in charge. Upon attainment of the 4\ts{th} circle, mortal beings are assembled in groups of 10, and again charge is given to a pair of seraphim, assisted by 1 company of cherubim.
 \vs p113 1:8 When a mortal mind breaks through the inertia of animal legacy and attains the 3\ts{rd} circle of human intellectuality and acquired spirituality, a personal angel (in reality 2) will henceforth be wholly and exclusively devoted to this ascending mortal. And thus these human souls, in addition to the ever\hyp{}present and increasingly efficient indwelling Thought Adjusters, receive the undivided assistance of these personal guardians of destiny in all their efforts to finish the 3\ts{rd} circle, traverse the 2\ts{nd}, and attain the 1\ts{st}.
