--- a/tex/p130.tex
+++ b/tex/p130.tex
@@ -28,23 +28,9 @@
 \usection{3.\bibnobreakspace At Alexandria}
 \vs p130 3:1 It had been an eventful visit at Caesarea, and when the boat was ready, Jesus and his two friends departed at noon one day for Alexandria in Egypt.
 \vs p130 3:2 The three enjoyed a most pleasant passage to Alexandria. Ganid was delighted with the voyage and kept Jesus busy answering questions. As they approached the city’s harbour, the young man was thrilled by the great lighthouse of Pharos, located on the island which Alexander had joined by a mole to the mainland, thus creating two magnificent harbours and thereby making Alexandria the maritime commercial crossroads of Africa, Asia, and Europe. This great lighthouse was one of the seven wonders of the world and was the forerunner of all subsequent lighthouses. They arose early in the morning to view this splendid lifesaving device of man, and amidst the exclamations of Ganid Jesus said: \textcolour{ubdarkred}{“And you, my son, will be like this lighthouse when you return to India, even after your father is laid to rest; you will become like the light of life to those who sit about you in darkness, showing all who so desire the way to reach the harbour of salvation in safety.”} And as Ganid squeezed Jesus’ hand, he said, “I will.”
-\vs p130 3:3 \pc And again we remark that the early teachers of the Christian religion made a great mistake when they so exclusively turned their attention to the western civilization of the Roman world. The teachings of Jesus, as they were held by the Mesopotamian believers of the first century, would have been readily received by the various groups of Asiatic religionists.
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.46}\tunemarkup{pghanlin}{0.41}\tunemarkup{pgnexus7}{0.41}\tunemarkup{pgkindledx}{0.31}]{../urantia-pictures/Jesus-Ganid-lighthouse.jpg}
-\caption{Jesus and Ganid at the Great Lighthouse by Slawa~Radziszewska}
-\end{figure}
-}
+\vs p130 3:3 \pc And again we remark that the early teachers of the Christian religion made a great mistake when they so exclusively turned their attention to the western civilization of the Roman world. The teachings of Jesus, as they were held by the Mesopotamian believers of the first century, would have been readily received by the various groups of Asiatic religionists.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.46}\tunemarkup{pghanlin}{0.41}\tunemarkup{pgnexus7}{0.41}\tunemarkup{pgkindledx}{0.31}]{../urantia-pictures/Jesus-Ganid-lighthouse.jpg}\caption{Jesus and Ganid at the Great Lighthouse by Slawa~Radziszewska}\end{figure}}
 \vs p130 3:4 \pc By the fourth hour after landing they were settled near the eastern end of the long and broad avenue, 30\,m wide and 8\,km long, which stretched on out to the western limits of this city of 1,000,000 people. After the first survey of the city’s chief attractions --- university (museum), library, the royal mausoleum of Alexander, the palace, temple of Neptune, theatre, and gymnasium --- Gonod addressed himself to business while Jesus and Ganid went to the library, the greatest in the world. Here were assembled nearly 1,000,000 manuscripts from all the civilized world: Greece, Rome, Palestine, Parthia, India, China, and even Japan. In this library Ganid saw the largest collection of Indian literature in all the world; and they spent some time here each day throughout their stay in Alexandria. Jesus told Ganid about the translation of the Hebrew scriptures into Greek at this place. And they discussed again and again all the religions of the world, Jesus endeavouring to point out to this young mind the truth in each, always adding: \textcolour{ubdarkred}{“But Yahweh is the God developed from the revelations of Melchizedek and the covenant of Abraham. The Jews were the offspring of Abraham and subsequently occupied the very land wherein Melchizedek had lived and taught, and from which he sent teachers to all the world; and their religion eventually portrayed a clearer recognition of the Lord God of Israel as the Universal Father in heaven than any other world religion.”}
-\vs p130 3:5 \pc Under Jesus’ direction Ganid made a collection of the teachings of all those religions of the world which recognized a Universal Deity, even though they might also give more or less recognition to subordinate deities. After much discussion Jesus and Ganid decided that the Romans had no real God in their religion, that their religion was hardly more than emperor worship. The Greeks, they concluded, had a philosophy but hardly a religion with a personal God. The mystery cults they discarded because of the confusion of their multiplicity, and because their varied concepts of Deity seemed to be derived from other and older religions.
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.7}\tunemarkup{pghanlin}{0.78}\tunemarkup{pgnexus7}{0.89}\tunemarkup{pgkindledx}{0.68}]{../urantia-pictures/Jesus-Ganid-Alexandria.jpg}
-\caption{Studying at the Alexandrian Library by Slawa~Radziszewska}
-\end{figure}
-}
+\vs p130 3:5 \pc Under Jesus’ direction Ganid made a collection of the teachings of all those religions of the world which recognized a Universal Deity, even though they might also give more or less recognition to subordinate deities. After much discussion Jesus and Ganid decided that the Romans had no real God in their religion, that their religion was hardly more than emperor worship. The Greeks, they concluded, had a philosophy but hardly a religion with a personal God. The mystery cults they discarded because of the confusion of their multiplicity, and because their varied concepts of Deity seemed to be derived from other and older religions.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.7}\tunemarkup{pghanlin}{0.78}\tunemarkup{pgnexus7}{0.89}\tunemarkup{pgkindledx}{0.68}]{../urantia-pictures/Jesus-Ganid-Alexandria.jpg}\caption{Studying at the Alexandrian Library by Slawa~Radziszewska}\end{figure}}
 \vs p130 3:6 Although these translations were made at Alexandria, Ganid did not finally arrange these selections and add his own personal conclusions until near the end of their sojourn in Rome. He was much surprised to discover that the best of the authors of the world’s sacred literature all more or less clearly recognized the existence of an eternal God and were much in agreement with regard to his character and his relationship with mortal man.
 \vs p130 3:7 \pc Jesus and Ganid spent much time in the museum during their stay in Alexandria. This museum was not a collection of rare objects but rather a university of fine art, science, and literature. Learned professors here gave daily lectures, and in those times this was the intellectual centre of the Occidental world. Day by day Jesus interpreted the lectures to Ganid; one day during the second week the young man exclaimed: “Teacher Joshua, you know more than these professors; you should stand up and tell them the great things you have told me; they are befogged by much thinking. I shall speak to my father and have him arrange it.” Jesus smiled, saying: \textcolour{ubdarkred}{“You are an admiring pupil, but these teachers are not minded that you and I should instruct them. The pride of unspiritualized learning is a treacherous thing in human experience. The true teacher maintains his intellectual integrity by ever remaining a learner.”}
 \vs p130 3:8 Alexandria was the city of the blended culture of the Occident and next to Rome the largest and most magnificent in the world. Here was located the largest Jewish synagogue in the world, the seat of government of the Alexandria Sanhedrin, the 70 ruling elders.
