--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -55,14 +55,7 @@
 \vs p135 8:3 Just before the noon rest, Jesus laid down his tools, removed his work apron, and merely announced to the three workmen in the room with him, \textcolour{ubdarkred}{“My hour has come.”} He went out to his brothers James and Jude, repeating, \textcolour{ubdarkred}{“My hour has come --- let us go to John.”} And they started immediately for Pella, eating their lunch as they journeyed. This was on Sunday, January 13. They tarried for the night in the Jordan valley and arrived on the scene of John’s baptizing about noon of the next day.
 \vs p135 8:4 \pc John had just begun baptizing the candidates for the day. Scores of repentants were standing in line awaiting their turn when Jesus and his two brothers took up their positions in this line of earnest men and women who had become believers in John’s preaching of the coming kingdom. John had been inquiring about Jesus of Zebedee’s sons. He had heard of Jesus’ remarks concerning his preaching, and he was day by day expecting to see him arrive on the scene, but he had not expected to greet him in the line of baptismal candidates.
 \vs p135 8:5 Being engrossed with the details of rapidly baptizing such a large number of converts, John did not look up to see Jesus until the Son of Man stood in his immediate presence. When John recognized Jesus, the ceremonies were halted for a moment while he greeted his cousin in the flesh and asked, “But why do you come down into the water to greet me?” And Jesus answered, \textcolour{ubdarkred}{“To be subject to your baptism.”} John replied: “But I have need to be baptized by you. Why do you come to me?” And Jesus whispered to John: \textcolour{ubdarkred}{“Bear with me now, for it becomes us to set this example for my brothers standing here with me, and that the people may know that my hour has come.”}
-\vs p135 8:6 \pc There was a tone of finality and authority in Jesus’ voice. John was atremble with emotion as he made ready to baptize Jesus of Nazareth in the Jordan at noon on Monday, January 14, A.D.\,26. Thus did John baptize Jesus and his two brothers James and Jude. And when John had baptized these three, he dismissed the others for the day, announcing that he would resume baptisms at noon the next day. As the people were departing, the four men still standing in the water heard a strange sound, and presently there appeared for a moment an apparition immediately over the head of Jesus, and they heard a voice saying, “This is my beloved Son in whom I am well pleased.” A great change came over the countenance of Jesus, and coming up out of the water in silence he took leave of them, going toward the hills to the east. And no man saw Jesus again for 40 days.
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.48}\tunemarkup{pghanlin}{0.49}\tunemarkup{pgnexus7}{0.63}\tunemarkup{pgkindledx}{0.49}]{../urantia-pictures/William_Hole_The_Baptism_of_Jesus_525.jpg}
-\caption{The Baptism of Jesus by William~Hole}
-\end{figure}
-}
+\vs p135 8:6 \pc There was a tone of finality and authority in Jesus’ voice. John was atremble with emotion as he made ready to baptize Jesus of Nazareth in the Jordan at noon on Monday, January 14, A.D.\,26. Thus did John baptize Jesus and his two brothers James and Jude. And when John had baptized these three, he dismissed the others for the day, announcing that he would resume baptisms at noon the next day. As the people were departing, the four men still standing in the water heard a strange sound, and presently there appeared for a moment an apparition immediately over the head of Jesus, and they heard a voice saying, “This is my beloved Son in whom I am well pleased.” A great change came over the countenance of Jesus, and coming up out of the water in silence he took leave of them, going toward the hills to the east. And no man saw Jesus again for 40 days.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.48}\tunemarkup{pghanlin}{0.49}\tunemarkup{pgnexus7}{0.63}\tunemarkup{pgkindledx}{0.49}]{../urantia-pictures/William_Hole_The_Baptism_of_Jesus_525.jpg}\caption{The Baptism of Jesus by William~Hole}\end{figure}}
 \vs p135 8:7 John followed Jesus a sufficient distance to tell him the story of Gabriel’s visit to his mother ere either had been born, as he had heard it so many times from his mother’s lips. He allowed Jesus to continue on his way after he had said, “Now I know of a certainty that you are the Deliverer.” But Jesus made no reply.
 \usection{9.\bibnobreakspace Forty Days of Preaching}
 \vs p135 9:1 When John returned to his disciples (he now had some 25 or 30 who abode with him constantly), he found them in earnest conference, discussing what had just happened in connection with Jesus’ baptism. They were all the more astonished when John now made known to them the story of the Gabriel visitation to Mary before Jesus was born, and also that Jesus spoke no word to him even after he had told him about this. There was no rain that evening, and this group of 30 or more talked long into the starlit night. They wondered where Jesus had gone, and when they would see him again.
