--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -6,14 +6,7 @@
 \usection{1.\bibnobreakspace The Draught of Fishes}
 \vs p145 1:1 On Friday morning of this same week, when Jesus was teaching by the seaside, the people crowded him so near the water’s edge that he signalled to some fishermen occupying a near\hyp{}by boat to come to his rescue. Entering the boat, he continued to teach the assembled multitude for more than two hours. This boat was named “Simon”; it was the former fishing vessel of Simon Peter and had been built by Jesus’ own hands. On this particular morning the boat was being used by David Zebedee and two associates, who had just come in near shore from a fruitless night of fishing on the lake. They were cleaning and mending their nets when Jesus requested them to come to his assistance.
 \vs p145 1:2 After Jesus had finished teaching the people, he said to David: \textcolour{ubdarkred}{“As you were delayed by coming to my help, now let me work with you. Let us go fishing; put out into yonder deep and let down your nets for a draught.”} But Simon, one of David’s assistants, answered: “Master, it is useless. We toiled all night and took nothing; however, at your bidding we will put out and let down the nets.” And Simon consented to follow Jesus’ directions because of a gesture made by his master, David. When they had proceeded to the place designated by Jesus, they let down their nets and enclosed such a multitude of fish that they feared the nets would break, so much so that they signalled to their associates on the shore to come to their assistance. When they had filled all three boats with fish, almost to sinking, this Simon fell down at Jesus’ knees, saying, “Depart from me, Master, for I am a sinful man.” Simon and all who were concerned in this episode were amazed at the draught of fishes. From that day David Zebedee, this Simon, and their associates forsook their nets and followed Jesus.
-\vs p145 1:3 But this was in no sense a miraculous draught of fishes. Jesus was a close student of nature; he was an experienced fisherman and knew the habits of the fish in the Sea of Galilee. On this occasion he merely directed these men to the place where the fish were usually to be found at this time of day. But Jesus’ followers always regarded this as a miracle.
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.64}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.53}\tunemarkup{pgkindledx}{0.48}]{../urantia-pictures/William_Hole_The_Draught_Of_Fishes_525.jpg}
-\caption{The Draught of Fishes by William~Hole}
-\end{figure}
-}
+\vs p145 1:3 But this was in no sense a miraculous draught of fishes. Jesus was a close student of nature; he was an experienced fisherman and knew the habits of the fish in the Sea of Galilee. On this occasion he merely directed these men to the place where the fish were usually to be found at this time of day. But Jesus’ followers always regarded this as a miracle.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.64}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.53}\tunemarkup{pgkindledx}{0.48}]{../urantia-pictures/William_Hole_The_Draught_Of_Fishes_525.jpg}\caption{The Draught of Fishes by William~Hole}\end{figure}}
 \usection{2.\bibnobreakspace Afternoon at the Synagogue}
 \vs p145 2:1 The next Sabbath, at the afternoon service in the synagogue, Jesus preached his sermon on \textcolour{ubdarkred}{“The Will of the Father in Heaven.”} In the morning Simon Peter had preached on “The Kingdom.” At the Thursday evening meeting of the synagogue Andrew had taught, his subject being “The New Way.” At this particular time more people believed in Jesus in Capernaum than in any other one city on earth.
 \vs p145 2:2 As Jesus taught in the synagogue this Sabbath afternoon, according to custom he took the first text from the Law\fnc{text from the \bibtextul{law}. See the note on \bibref[123:5.3]{p123 5:3}.}, reading from the Book of Exodus: \textcolour{ubdarkred}{“And you shall serve the Lord, your God, and he shall bless your bread and your water, and all sickness shall be taken away from you.”} He chose the second text from the Prophets, reading from Isaiah: \textcolour{ubdarkred}{“Arise and shine, for your light has come, and the glory of the Lord has risen upon you. Darkness may cover the earth and gross darkness the people, but the spirit of the Lord shall arise upon you, and the divine glory shall be seen with you. Even the gentiles shall come to this light, and many great minds shall surrender to the brightness of this light.”}
