--- a/tex/p179.tex
+++ b/tex/p179.tex
@@ -22,14 +22,7 @@
 \vs p179 3:1 After drinking the first cup of the Passover, it was the Jewish custom for the host to arise from the table and wash his hands. Later on in the meal and after the second cup, all of the guests likewise rose up and washed their hands. Since the apostles knew that their Master never observed these rites of ceremonial hand washing, they were very curious to know what he intended to do when, after they had partaken of this first cup, he arose from the table and silently made his way over to near the door, where the water pitchers, basins, and towels had been placed. And their curiosity grew into astonishment as they saw the Master remove his outer garment, gird himself with a towel, and begin to pour water into one of the foot basins. Imagine the amazement of these 12 men, who had so recently refused to wash one another’s feet, and who had engaged in such unseemly disputes about positions of honour at the table, when they saw him make his way around the unoccupied end of the table to the lowest seat of the feast, where Simon Peter reclined, and, kneeling down in the attitude of a servant, make ready to wash Simon’s feet. As the Master knelt, all 12 arose as one man to their feet; even the traitorous Judas so far forgot his infamy for a moment as to arise with his fellow apostles in this expression of surprise, respect, and utter amazement.
 \vs p179 3:2 There stood Simon Peter, looking down into the upturned face of his Master. Jesus said nothing; it was not necessary that he should speak. His attitude plainly revealed that he was minded to wash Simon Peter’s feet. Notwithstanding his frailties of the flesh, Peter loved the Master. This Galilean fisherman was the first human being wholeheartedly to believe in the divinity of Jesus \bibemph{and} to make full and public confession of that belief. And Peter had never since really doubted the divine nature of the Master. Since Peter so revered and honoured Jesus in his heart, it was not strange that his soul resented the thought of Jesus’ kneeling there before him in the attitude of a menial servant and proposing to wash his feet as would a slave. When Peter presently collected his wits sufficiently to address the Master, he spoke the heart feelings of all his fellow apostles.
 \vs p179 3:3 After a few moments of this great embarrassment, Peter said, “Master, do you really mean to wash my feet?” And then, looking up into Peter’s face, Jesus said: \textcolour{ubdarkred}{“You may not fully understand what I am about to do, but hereafter you will know the meaning of all these things.”} Then Simon Peter, drawing a long breath, said, “Master, you shall never wash my feet!” And each of the apostles nodded their approval of Peter’s firm declaration of refusal to allow Jesus thus to humble himself before them.
-\vs p179 3:4 The dramatic appeal of this unusual scene at first touched the heart of even Judas Iscariot; but when his vainglorious intellect passed judgment upon the spectacle, he concluded that this gesture of humility was just one more episode which conclusively proved that Jesus would never qualify as Israel’s deliverer, and that he had made no mistake in the decision to desert the Master’s cause.
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.53}\tunemarkup{pghanlin}{0.47}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Jesus-washing-feet.jpg}
-\caption{The Master Teacher by Del~Parson}
-\end{figure}
-}
+\vs p179 3:4 The dramatic appeal of this unusual scene at first touched the heart of even Judas Iscariot; but when his vainglorious intellect passed judgment upon the spectacle, he concluded that this gesture of humility was just one more episode which conclusively proved that Jesus would never qualify as Israel’s deliverer, and that he had made no mistake in the decision to desert the Master’s cause.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.53}\tunemarkup{pghanlin}{0.47}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Jesus-washing-feet.jpg}\caption{The Master Teacher by Del~Parson}\end{figure}}
 \vs p179 3:5 As they all stood there in breathless amazement, Jesus said: \textcolour{ubdarkred}{“Peter, I declare that, if I do not wash your feet, you will have no part with me in that which I am about to perform.”} When Peter heard this declaration, coupled with the fact that Jesus continued kneeling there at his feet, he made one of those decisions of blind acquiescence in compliance with the wish of one whom he respected and loved. As it began to dawn on Simon Peter that there was attached to this proposed enactment of service some signification that determined one’s future connection with the Master’s work, he not only became reconciled to the thought of allowing Jesus to wash his feet but, in his characteristic and impetuous manner, said: “Then, Master, wash not my feet only but also my hands and my head.”
 \vs p179 3:6 As the Master made ready to begin washing Peter’s feet, he said: \textcolour{ubdarkred}{“He who is already clean needs only to have his feet washed. You who sit with me tonight are clean --- but not all. But the dust of your feet should have been washed away before you sat down at meat with me. And besides, I would perform this service for you as a parable to illustrate the meaning of a new commandment which I will presently give you.”}
 \vs p179 3:7 In like manner the Master went around the table, in silence, washing the feet of his 12 apostles, not even passing by Judas. When Jesus had finished washing the feet of the 12, he donned his cloak, returned to his place as host, and after looking over his bewildered apostles, said:
