--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -62,14 +62,7 @@
 \vs p042 4:9 The blazing suns can transform matter into various forms of energy, but the dark worlds and all outer space can slow down electronic and ultimatonic activity to the point of converting these energies into the matter of the realms. Certain electronic associations of a close nature, as well as many of the basic associations of nuclear matter, are formed in the exceedingly low temperatures of open space, being later augmented by association with larger accretions of materializing energy.
 \vs p042 4:10 Throughout all of this never\hyp{}ending metamorphosis of energy and matter we must reckon with the influence of gravity pressure and with the antigravity behaviour of the ultimatonic energies under certain conditions of temperature, velocity, and revolution. Temperature, energy currents, distance, and the presence of the living force organizers and the power directors also have a bearing on all transmutation phenomena of energy and matter.
 \vs p042 4:11 The increase of mass in matter is equal to the increase of energy divided by the square of the velocity of light. \begin{equation}\Delta m = {\Delta E \over c^2}\end{equation} In a dynamic sense the work which resting matter can perform is equal to the energy expended in bringing its parts together from Paradise minus the resistance of the forces overcome in transit and the attraction exerted by the parts of matter on one another.
-\vs p042 4:12 \pc The existence of pre\hyp{}electronic forms of matter is indicated by the two atomic weights of lead. The lead of original formation weighs slightly more than that produced through uranium disintegration by way of radium emanations\fnst{\textbf{radium emanations}, the archaic term for the chemical element radon ($^{222}_{86}$Rn), which is the indirect decay product (via radium $^{226}_{88}$Ra) of Uranium-238.}; and this difference in atomic weight represents the actual loss of energy in the atomic breakup.
-\tunemarkup{pictures}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.48}\tunemarkup{pghanlin}{0.43}\tunemarkup{pgnexus7}{0.49}\tunemarkup{pgkindledx}{0.41}]{../urantia-pictures/Uranium-Decay-Series.jpg}
-\caption{Uranium-238 decay series ending in Lead-206}
-\end{figure}
-}
+\vs p042 4:12 \pc The existence of pre\hyp{}electronic forms of matter is indicated by the two atomic weights of lead. The lead of original formation weighs slightly more than that produced through uranium disintegration by way of radium emanations\fnst{\textbf{radium emanations}, the archaic term for the chemical element radon ($^{222}_{86}$Rn), which is the indirect decay product (via radium $^{226}_{88}$Ra) of Uranium-238.}; and this difference in atomic weight represents the actual loss of energy in the atomic breakup.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.48}\tunemarkup{pghanlin}{0.43}\tunemarkup{pgnexus7}{0.49}\tunemarkup{pgkindledx}{0.41}]{../urantia-pictures/Uranium-Decay-Series.jpg}\caption{Uranium-238 decay series ending in Lead-206}\end{figure}}
 \vs p042 4:13 \pc The relative integrity of matter is assured by the fact that energy can be absorbed or released only in those exact amounts which Urantia scientists have designated quanta. This wise provision in the material realms serves to maintain the universes as going concerns.
 \vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860 times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
 \usection{5.\bibnobreakspace Wave\hyp{}Energy Manifestations}
