--- a/tex/p133.tex
+++ b/tex/p133.tex
@@ -10,14 +10,7 @@
 \vs p133 1:4 \textcolour{ubdarkred}{“Ganid, I can well understand how some of these problems perplex you, and I will endeavour to answer your question. First, in all attacks which might be made upon my person, I would determine whether or not the aggressor was a son of God --- my brother in the flesh --- and if I thought such a creature did not possess moral judgment and spiritual reason, I would unhesitatingly defend myself to the full capacity of my powers of resistance, regardless of consequences to the attacker. But I would not thus assault a fellow man of sonship status, even in self\hyp{}defence. That is, I would not punish him in advance and without judgment for his assault upon me. I would by every possible artifice seek to prevent and dissuade him from making such an attack and to mitigate it in case of my failure to abort it. Ganid, I have absolute confidence in my heavenly Father’s overcare; I am consecrated to doing the will of my Father in heaven. I do not believe that \bibemph{real} harm can befall me; I do not believe that my lifework can really be jeopardized by anything my enemies might wish to visit upon me, and surely we have no violence to fear from our friends. I am absolutely assured that the entire universe is friendly to me --- this all\hyp{}powerful truth I insist on believing with a wholehearted trust in spite of all appearances to the contrary.”}
 \vs p133 1:5 But Ganid was not fully satisfied. Many times they talked over these matters, and Jesus told him some of his boyhood experiences and also about Jacob the stone mason’s son. On learning how Jacob appointed himself to defend Jesus, Ganid said: “Oh, I begin to see! In the first place very seldom would any normal human being want to attack such a kindly person as you, and even if anyone should be so unthinking as to do such a thing, there is pretty sure to be near at hand some other mortal who will fly to your assistance, even as you always go to the rescue of any person you observe to be in distress. In my heart, Teacher, I agree with you, but in my head I still think that if I had been Jacob, I would have enjoyed punishing those rude fellows who presumed to attack you just because they thought you would not defend yourself. I presume you are fairly safe in your journey through life since you spend much of your time helping others and ministering to your fellows in distress --- well, most likely there’ll always be someone on hand to defend you.” And Jesus replied: \textcolour{ubdarkred}{“That test has not yet come, Ganid, and when it does, we will have to abide by the Father’s will.”} And that was about all the lad could get his teacher to say on this difficult subject of self\hyp{}defence and nonresistance. On another occasion he did draw from Jesus the opinion that organized society had every right to employ force in the execution of its just mandates.
 \usection{2.\bibnobreakspace Embarking at Tarentum}
-\vs p133 2:1 While tarrying at the ship landing, waiting for the boat to unload cargo, the travellers observed a man mistreating his wife. As was his custom, Jesus intervened in behalf of the person subjected to attack. He stepped up behind the irate husband and, tapping him gently on the shoulder, said: \textcolour{ubdarkred}{“My friend, may I speak with you in private for a moment?”} The angry man was nonplussed by such an approach and, after a moment of embarrassing hesitation, stammered out --- “er --- why --- yes, what do you want with me?” When Jesus had led him to one side, he said: \textcolour{ubdarkred}{“My friend, I perceive that something terrible must have happened to you; I very much desire that you tell me what could happen to such a strong man to lead him to attack his wife, the mother of his children, and that right out here before all eyes. I am sure you must feel that you have some good reason for this assault. What did the woman do to deserve such treatment from her husband? As I look upon you, I think I discern in your face the love of justice if not the desire to show mercy. I venture to say that, if you found me out by the wayside, attacked by robbers, you would unhesitatingly rush to my rescue. I dare say you have done many such brave things in the course of your life. Now, my friend, tell me what is the matter? Did the woman do something wrong, or did you foolishly lose your head and thoughtlessly assault her?”} It was not so much what he said that touched this man’s heart as the kindly look and the sympathetic smile which Jesus bestowed upon him at the conclusion of his remarks. Said the man: “I perceive you are a priest of the Cynics, and I am thankful you restrained me. My wife has done no great wrong; she is a good woman, but she irritates me by the manner in which she picks on me in public, and I lose my temper. I am sorry for my lack of self\hyp{}control, and I promise to try to live up to my former pledge to one of your brothers who taught me the better way many years ago. I promise you.”
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.55}\tunemarkup{pgnexus7}{0.61}\tunemarkup{pgkindledx}{0.47}]{../urantia-pictures/The_Intervention.jpg}
-\caption{The Intervention by Del~Parson}
-\end{figure}
-}
+\vs p133 2:1 While tarrying at the ship landing, waiting for the boat to unload cargo, the travellers observed a man mistreating his wife. As was his custom, Jesus intervened in behalf of the person subjected to attack. He stepped up behind the irate husband and, tapping him gently on the shoulder, said: \textcolour{ubdarkred}{“My friend, may I speak with you in private for a moment?”} The angry man was nonplussed by such an approach and, after a moment of embarrassing hesitation, stammered out --- “er --- why --- yes, what do you want with me?” When Jesus had led him to one side, he said: \textcolour{ubdarkred}{“My friend, I perceive that something terrible must have happened to you; I very much desire that you tell me what could happen to such a strong man to lead him to attack his wife, the mother of his children, and that right out here before all eyes. I am sure you must feel that you have some good reason for this assault. What did the woman do to deserve such treatment from her husband? As I look upon you, I think I discern in your face the love of justice if not the desire to show mercy. I venture to say that, if you found me out by the wayside, attacked by robbers, you would unhesitatingly rush to my rescue. I dare say you have done many such brave things in the course of your life. Now, my friend, tell me what is the matter? Did the woman do something wrong, or did you foolishly lose your head and thoughtlessly assault her?”} It was not so much what he said that touched this man’s heart as the kindly look and the sympathetic smile which Jesus bestowed upon him at the conclusion of his remarks. Said the man: “I perceive you are a priest of the Cynics, and I am thankful you restrained me. My wife has done no great wrong; she is a good woman, but she irritates me by the manner in which she picks on me in public, and I lose my temper. I am sorry for my lack of self\hyp{}control, and I promise to try to live up to my former pledge to one of your brothers who taught me the better way many years ago. I promise you.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.55}\tunemarkup{pgnexus7}{0.61}\tunemarkup{pgkindledx}{0.47}]{../urantia-pictures/The_Intervention.jpg}\caption{The Intervention by Del~Parson}\end{figure}}
 \vs p133 2:2 And then, in bidding him farewell, Jesus said: \textcolour{ubdarkred}{“My brother, always remember that man has no rightful authority over woman unless the woman has willingly and voluntarily given him such authority. Your wife has engaged to go through life with you, to help you fight its battles, and to assume the far greater share of the burden of bearing and rearing your children; and in return for this special service it is only fair that she receive from you that special protection which man can give to woman as the partner who must carry, bear, and nurture the children. The loving care and consideration which a man is willing to bestow upon his wife and their children are the measure of that man’s attainment of the higher levels of creative and spiritual self\hyp{}consciousness. Do you not know that men and women are partners with God in that they co\hyp{}operate to create beings who grow up to possess themselves of the potential of immortal souls? The Father in heaven treats the Spirit Mother of the children of the universe as one equal to himself. It is Godlike to share your life and all that relates thereto on equal terms with the mother partner who so fully shares with you that divine experience of reproducing yourselves in the lives of your children. If you can only love your children as God loves you, you will love and cherish your wife as the Father in heaven honours and exalts the Infinite Spirit, the mother of all the spirit children of a vast universe.”}
 \vs p133 2:3 As they went on board the boat, they looked back upon the scene of the teary\hyp{}eyed couple standing in silent embrace. Having heard the latter half of Jesus’ message to the man, Gonod was all day occupied with meditations thereon, and he resolved to reorganize his home when he returned to India.
 \vs p133 2:4 The journey to Nicopolis was pleasant but slow as the wind was not favourable. The three spent many hours recounting their experiences in Rome and reminiscing about all that had happened to them since they first met in Jerusalem. Ganid was becoming imbued with the spirit of personal ministry. He began work on the steward of the ship, but on the second day, when he got into deep religious water, he called on Joshua to help him out.
@@ -31,14 +24,7 @@
 \vs p133 3:6 When in Rome, Ganid observed that Jesus refused to accompany them to the public baths. Several times afterwards the young man sought to induce Jesus further to express himself in regard to the relations of the sexes. Though he would answer the lad’s questions, he never seemed disposed to discuss these subjects at great length. One evening as they strolled about Corinth out near where the wall of the citadel ran down to the sea, they were accosted by two public women. Ganid had imbibed the idea, and rightly, that Jesus was a man of high ideals, and that he abhorred everything which partook of uncleanness or savoured of evil; accordingly he spoke sharply to these women and rudely motioned them away. When Jesus saw this, he said to Ganid: \textcolour{ubdarkred}{“You mean well, but you should not presume thus to speak to the children of God, even though they chance to be his erring children. Who are we that we should sit in judgment on these women? Do you happen to know all of the circumstances which led them to resort to such methods of obtaining a livelihood? Stop here with me while we talk about these matters.”} The courtesans were astonished at what he said even more than was Ganid.
 \vs p133 3:7 As they stood there in the moonlight, Jesus went on to say: \textcolour{ubdarkred}{“There lives within every human mind a divine spirit, the gift of the Father in heaven. This good spirit ever strives to lead us to God, to help us to find God and to know God; but also within mortals there are many natural physical tendencies which the Creator put there to serve the well\hyp{}being of the individual and the race. Now, oftentimes, men and women become confused in their efforts to understand themselves and to grapple with the manifold difficulties of making a living in a world so largely dominated by selfishness and sin. I perceive, Ganid, that neither of these women is wilfully wicked. I can tell by their faces that they have experienced much sorrow; they have suffered much at the hands of an apparently cruel fate; they have not intentionally chosen this sort of life; they have, in discouragement bordering on despair, surrendered to the pressure of the hour and accepted this distasteful means of obtaining a livelihood as the best way out of a situation that to them appeared hopeless. Ganid, some people are really wicked at heart; they deliberately choose to do mean things, but, tell me, as you look into these now tear\hyp{}stained faces, do you see anything bad or wicked?”} And as Jesus paused for his reply, Ganid’s voice choked up as he stammered out his answer: “No, Teacher, I do not. And I apologize for my rudeness to them --- I crave their forgiveness.” Then said Jesus: \textcolour{ubdarkred}{“And I bespeak for them that they have forgiven you as I speak for my Father in heaven that he has forgiven them. Now all of you come with me to a friend’s house where we will seek refreshment and plan for the new and better life ahead.”} Up to this time the amazed women had not uttered a word; they looked at each other and silently followed as the men led the way.
 \vs p133 3:8 Imagine the surprise of Justus’ wife when, at this late hour, Jesus appeared with Ganid and these two strangers, saying: \textcolour{ubdarkred}{“You will forgive us for coming at this hour, but Ganid and I desire a bite to eat, and we would share it with these our new\hyp{}found friends, who are also in need of nourishment; and besides all this, we come to you with the thought that you will be interested in counselling with us as to the best way to help these women get a new start in life. They can tell you their story, but I surmise they have had much trouble, and their very presence here in your house testifies how earnestly they crave to know good people, and how willingly they will embrace the opportunity to show all the world --- and even the angels of heaven --- what brave and noble women they can become.”}
-\vs p133 3:9 When Martha, Justus’ wife, had spread the food on the table, Jesus, taking unexpected leave of them, said: \textcolour{ubdarkred}{“As it is getting late, and since the young man’s father will be awaiting us, we pray to be excused while we leave you here together --- three women --- the beloved children of the Most High. And I will pray for your spiritual guidance while you make plans for a new and better life on earth and eternal life in the great beyond.”}
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.39}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.26}]{../urantia-pictures/Two-Courtesans.jpg}
-\caption{The Two Courtesans by Slawa~Radziszewska}
-\end{figure}
-}
+\vs p133 3:9 When Martha, Justus’ wife, had spread the food on the table, Jesus, taking unexpected leave of them, said: \textcolour{ubdarkred}{“As it is getting late, and since the young man’s father will be awaiting us, we pray to be excused while we leave you here together --- three women --- the beloved children of the Most High. And I will pray for your spiritual guidance while you make plans for a new and better life on earth and eternal life in the great beyond.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.39}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.26}]{../urantia-pictures/Two-Courtesans.jpg}\caption{The Two Courtesans by Slawa~Radziszewska}\end{figure}}
 \vs p133 3:10 Thus did Jesus and Ganid take leave of the women. So far the two courtesans had said nothing; likewise was Ganid speechless. And for a few moments so was Martha, but presently she rose to the occasion and did everything for these strangers that Jesus had hoped for. The elder of these two women died a short time thereafter, with bright hopes of eternal survival, and the younger woman worked at Justus’ place of business and later became a lifelong member of the first Christian church in Corinth.
 \vs p133 3:11 Several times in the home of Crispus, Jesus and Ganid met one Gaius, who subsequently became a loyal supporter of Paul. During these two months in Corinth they held intimate conversations with scores of worth\hyp{}while individuals, and as a result of all these apparently casual contacts more than half of the individuals so affected became members of the subsequent Christian community.
 \vs p133 3:12 When Paul first went to Corinth, he had not intended to make a prolonged visit. But he did not know how well the Jewish tutor had prepared the way for his labours. And further, he discovered that great interest had already been aroused by Aquila and Priscilla, Aquila being one of the Cynics with whom Jesus had come in contact when in Rome. This couple were Jewish refugees from Rome, and they quickly embraced Paul’s teachings. He lived with them and worked with them, for they were also tentmakers. It was because of these circumstances that Paul prolonged his stay in Corinth.
@@ -51,14 +37,7 @@
 \vs p133 4:6 \pc To the Greek contractor and builder he said: \textcolour{ubdarkred}{“My friend, as you build the material structures of men, grow a spiritual character in the similitude of the divine spirit within your soul. Do not let your achievement as a temporal builder outrun your attainment as a spiritual son of the kingdom of heaven. While you build the mansions of time for another, neglect not to secure your title to the mansions of eternity for yourself. Ever remember, there is a city whose foundations are righteousness and truth, and whose builder and maker is God.”}
 \vs p133 4:7 \pc To the Roman judge he said: \textcolour{ubdarkred}{“As you judge men, remember that you yourself will also some day come to judgment before the bar of the Rulers of a universe. Judge justly, even mercifully, even as you shall some day thus crave merciful consideration at the hands of the Supreme Arbiter. Judge as you would be judged under similar circumstances, thus being guided by the spirit of the law as well as by its letter. And even as you accord justice dominated by fairness in the light of the need of those who are brought before you, so shall you have the right to expect justice tempered by mercy when you sometime stand before the Judge of all the earth.”}
 \vs p133 4:8 \pc To the mistress of the Greek inn he said: \textcolour{ubdarkred}{“Minister your hospitality as one who entertains the children of the Most High. Elevate the drudgery of your daily toil to the high levels of a fine art through the increasing realization that you minister to God in the persons whom he indwells by his spirit which has descended to live within the hearts of men, thereby seeking to transform their minds and lead their souls to the knowledge of the Paradise Father of all these bestowed gifts of the divine spirit.”}
-\vs p133 4:9 \pc Jesus had many visits with a Chinese merchant. In saying good\hyp{}bye, he admonished him: \textcolour{ubdarkred}{“Worship only God, who is your true spirit ancestor. Remember that the Father’s spirit ever lives within you and always points your soul\hyp{}direction heavenward. If you follow the unconscious leadings of this immortal spirit, you are certain to continue on in the uplifted way of finding God. And when you do attain the Father in heaven, it will be because by seeking him you have become more and more like him. And so farewell, Chang, but only for a season, for we shall meet again in the worlds of light where the Father of spirit souls has provided many delightful stopping\hyp{}places for those who are Paradise\hyp{}bound.”}
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Jesus-and-the-Chinese-merchant.jpg}
-\caption{Jesus and the Chinese Merchant by Slawa~Radziszewska}
-\end{figure}
-}
+\vs p133 4:9 \pc Jesus had many visits with a Chinese merchant. In saying good\hyp{}bye, he admonished him: \textcolour{ubdarkred}{“Worship only God, who is your true spirit ancestor. Remember that the Father’s spirit ever lives within you and always points your soul\hyp{}direction heavenward. If you follow the unconscious leadings of this immortal spirit, you are certain to continue on in the uplifted way of finding God. And when you do attain the Father in heaven, it will be because by seeking him you have become more and more like him. And so farewell, Chang, but only for a season, for we shall meet again in the worlds of light where the Father of spirit souls has provided many delightful stopping\hyp{}places for those who are Paradise\hyp{}bound.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Jesus-and-the-Chinese-merchant.jpg}\caption{Jesus and the Chinese Merchant by Slawa~Radziszewska}\end{figure}}
 \vs p133 4:10 \pc To the traveller from Britain he said: \textcolour{ubdarkred}{“My brother, I perceive you are seeking for truth, and I suggest that the spirit of the Father of all truth may chance to dwell within you. Did you ever sincerely endeavour to talk with the spirit of your own soul? Such a thing is indeed difficult and seldom yields consciousness of success; but every honest attempt of the material mind to communicate with its indwelling spirit meets with certain success, notwithstanding that the majority of all such magnificent human experiences must long remain as superconscious registrations in the souls of such God\hyp{}knowing mortals.”}
 \vs p133 4:11 \pc To the runaway lad Jesus said: \textcolour{ubdarkred}{“Remember, there are two things you cannot run away from --- God and yourself. Wherever you may go, you take with you yourself and the spirit of the heavenly Father which lives within your heart. My son, stop trying to deceive yourself; settle down to the courageous practice of facing the facts of life; lay firm hold on the assurances of sonship with God and the certainty of eternal life, as I have instructed you. From this day on purpose to be a real man, a man determined to face life bravely and intelligently.”}
 \vs p133 4:12 \pc To the condemned criminal he said at the last hour: \textcolour{ubdarkred}{“My brother, you have fallen on evil times. You lost your way; you became entangled in the meshes of crime. From talking to you, I well know you did not plan to do the thing which is about to cost you your temporal life. But you did do this evil, and your fellows have adjudged you guilty; they have determined that you shall die. You or I may not deny the state this right of self\hyp{}defence in the manner of its own choosing. There seems to be no way of humanly escaping the penalty of your wrongdoing. Your fellows must judge you by what you did, but there is a Judge to whom you may appeal for forgiveness, and who will judge you by your real motives and better intentions. You need not fear to meet the judgment of God if your repentance is genuine and your faith sincere. The fact that your error carries with it the death penalty imposed by man does not prejudice the chance of your soul to obtain justice and enjoy mercy before the heavenly courts.”}
@@ -88,14 +67,7 @@
 \usection{7.\bibnobreakspace The Sojourn at Cyprus --- Discourse on Mind}
 \vs p133 7:1 Shortly the travellers set sail for Cyprus, stopping at Rhodes. They enjoyed the long water voyage and arrived at their island destination much rested in body and refreshed in spirit.
 \vs p133 7:2 It was their plan to enjoy a period of real rest and play on this visit to Cyprus as their tour of the Mediterranean was drawing to a close. They landed at Paphos and at once began the assembly of supplies for their sojourn of several weeks in the near\hyp{}by mountains. On the third day after their arrival they started for the hills with their well\hyp{}loaded pack animals.
-\vs p133 7:3 For two weeks the trio greatly enjoyed themselves, and then, without warning, young Ganid was suddenly taken grievously ill. For two weeks he suffered from a raging fever, oftentimes becoming delirious; both Jesus and Gonod were kept busy attending the sick boy. Jesus skillfully and tenderly cared for the lad, and the father was amazed by both the gentleness and adeptness manifested in all his ministry to the afflicted youth. They were far from human habitations, and the boy was too ill to be moved; so they prepared as best they could to nurse him back to health right there in the mountains.
-\tunemarkup{private}{%
-\begin{figure}[H]
-\centering
-\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.39}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Tender-Loving-Care.jpg}
-\caption{Tender Loving Care by Slawa~Radziszewska}
-\end{figure}
-}
+\vs p133 7:3 For two weeks the trio greatly enjoyed themselves, and then, without warning, young Ganid was suddenly taken grievously ill. For two weeks he suffered from a raging fever, oftentimes becoming delirious; both Jesus and Gonod were kept busy attending the sick boy. Jesus skillfully and tenderly cared for the lad, and the father was amazed by both the gentleness and adeptness manifested in all his ministry to the afflicted youth. They were far from human habitations, and the boy was too ill to be moved; so they prepared as best they could to nurse him back to health right there in the mountains.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.39}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Tender-Loving-Care.jpg}\caption{Tender Loving Care by Slawa~Radziszewska}\end{figure}}
 \vs p133 7:4 During Ganid’s convalescence of three weeks Jesus told him many interesting things about nature and her various moods. And what fun they had as they wandered over the mountains, the boy asking questions, Jesus answering them, and the father marvelling at the whole performance.
 \vs p133 7:5 The last week of their sojourn in the mountains Jesus and Ganid had a long talk on the functions of the human mind. After several hours of discussion the lad asked this question: “But, Teacher, what do you mean when you say that man experiences a higher form of self\hyp{}consciousness than do the higher animals?” And as restated in modern phraseology, Jesus answered:
 \vs p133 7:6 \pc \textcolour{ubdarkred}{My son, I have already told you much about the mind of man and the divine spirit that lives therein, but now let me emphasize that self\hyp{}consciousness is a \bibemph{reality.} When any animal becomes self\hyp{}conscious, it becomes a primitive man. Such an attainment results from a co\hyp{}ordination of function between impersonal energy and spirit\hyp{}conceiving mind, and it is this phenomenon which warrants the bestowal of an absolute focal point for the human personality, the spirit of the Father in heaven.}
